# steam_reco_app

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
Bruno/: Healthcheck.bru  bruno.json
Bruno/Auth/: ChangePassword.bru  GetMe.bru  RefreshToken.bru  SignIn.bru  SignUp.bru
Bruno/Game/: CreateGame.bru  DeleteGame.bru  GetAllGames.bru  GetGameById.bru  SearchGames.bru  UpdateGame.bru
Bruno/GameUser/: AddGameToLibrary.bru  GetUserLibrary.bru  RemoveGameFromLibrary.bru
Bruno/NearGame/: AddNearGameLink.bru  DeleteNearGameLink.bru  GetNearestGames.bru
Bruno/Recommendation/: Get recommendations.bru  Manual Recommendation.bru  Nearest Games.bru
Bruno/Recommendation (FastAPI)/: Manual Recommendation.bru  Nearest Games.bru
Bruno/Recommendation (Hono)/: Chat Stream (Hono).bru  Get AI History (Hono).bru  Get Chat History (Hono).bru  Get by SteamID (Hono).bru  Manual Reco (Hono).bru  Nearest Games (Hono).bru
Bruno/Review/: CreateReview.bru  DeleteReview.bru  GetGameReviews.bru  GetReviewById.bru  UpdateReview.bru
Bruno/SteamUser/: CreateSteamUser.bru  DeleteSteamUser.bru  GetAllSteamUsers.bru  UpdateSteamUser.bru
Bruno/User/: CreateUser.bru  DeleteUser.bru  GetAllUsers.bru  GetUserById.bru  UpdateUser.bru
api/: .env.example  Dockerfile  package.json  tsconfig.json
api/src/: app.ts  (+1 more)
api_recommendation/: .env.example  Dockerfile  pyproject.toml
api_recommendation/src/: main.py  reco_service.py
api_recommendation/src/models/: mappings.pkl
db/: .env.example
front/: .env.example  Dockerfile  pubspec.yaml
(+124 files in other folders)
